--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Create.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Create.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container my-5">
     <form class="forms-sample" asp-action="Create" method="post" enctype="multipart/form-data">
-        <label style="padding-left:6px;" for="formFile" class="form-label my-2">Choose Photo</label>
+        <label style="padding-left:6px;" for="formFile" class="form-label my-2">Choose Photos</label>
         <input class="form-control" id="customFile" asp-for="Photos" />
         <span class="text-danger" asp-validation-for="Photos"></span>
         <div class="form-group">
