--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="~/admin/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-
+    @await RenderSectionAsync("Css",required:false)
     <link rel="stylesheet" href="~/admin/vendor/libs/apex-charts/apex-charts.css" />
 
     <!-- Page CSS -->
