--- a/BrideyApp/BrideyApp/Views/Home/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Home/Index.cshtml
@@ -288,7 +288,7 @@
                     <div class="cart">
                         <div class="new">New</div>
                         <div class="product-img">
-                            <a asp-controller="ProductDetail" asp-action="Index">
+                            <a>
                                 <img src="~/assets/images/dress6.jfif" class="primary-img" alt="Card image cap">
                                 <img src="~/assets/images/dresss6.jfif" class="secondary-img" alt="Card image cap">
                             </a>
@@ -315,7 +315,7 @@
                     <div class="cart">
                         <div class="new">New</div>
                         <div class="product-img">
-                            <a asp-controller="ProductDetail" asp-action="Index">
+                            <a>
                                 <img src="~/assets/images/dress8.jpg" class="primary-img" alt="Card image cap">
                                 <img src="~/assets/images/dresss8.jpg" class="secondary-img" alt="Card image cap">
                             </a>
@@ -341,7 +341,7 @@
 
             </div>
             <div class="btn-show-more">
-                <a>
+                <a asp-controller="Shop" asp-action="Index">
                     Show more
                     <i class="fa-solid fa-arrow-right-long"></i>
                 </a>
