--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Detail.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Detail.cshtml
@@ -69,20 +69,16 @@
         <input class="form-control" disabled id="customFile" value="@string.Join(", ",Model.ProductSizes.Select(m=>m.Size.Name))" />
     </div>
     <div class="form-group">
-        <label class="my-2">Tag</label>
+        <label class="my-2">Compositions</label>
         <input class="form-control" disabled id="customFile" value="@string.Join(", ",Model.ProductCompositions.Select(m=>m.Composition.Name))" />
     </div>
     <div class="form-group">
-        <label class="my-2">Tag</label>
+        <label class="my-2">Colors</label>
         <input class="form-control" disabled id="customFile" value="@string.Join(", ",Model.ProductColors.Select(m=>m.Color.Name))" />
     </div>
     <div class="form-group">
-        <label class="my-2">Color</label>
-        @*<input class="form-control" disabled id="customFile" value="@Model.ColorName" />*@
-    </div>
-    <div class="form-group">
         <div class="buttons my-3">
-            <a class="btn btn-info" asp-action="Index">Cancel</a>
+            <a class="btn mt-3" style="background: #696cffd1;color:#fff;" asp-route-page="@ViewBag.page" asp-action="Index">Back</a>
         </div>
     </div>
 </div>
