--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Index.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Index.cshtml
@@ -9,7 +9,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th style="text-align: center;">Images</th>
+                    <th style="text-align: center;">Image</th>
                     <th style="text-align: center;">Name</th>
                     <th style="text-align: center;">SKU</th>
                     <th style="text-align: center;">Price</th>
@@ -21,8 +21,8 @@
                 @foreach (var product in Model.Datas)
                 {
                     <tr data-id="@product.Id">
-                        <td class="py-1" style="text-align: center;">
-                            <img src="~/assets/images/@product.Images.Where(m=>m.IsMain).FirstOrDefault().Image" style="width: 297px;height:133px" alt="image" />
+                        <td class="py-1" style="text-align: center;width: 200px;height:200px">
+                            <img src="~/assets/images/@product.Images.Where(m=>m.IsMain).FirstOrDefault().Image" style="width: 100%;height:100%" alt="image" />
                         </td>
                  
                         <td class="py-1" style="text-align: center;">
@@ -32,11 +32,12 @@
                             @product.SKU
                         </td>
                         <td class="py-1" style="text-align: center;">
+                            <span>$</span>
                             @product.Price
                         </td>
                         <td class="py-1" style="text-align: center;">
-                            <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@product.Id">Info</a>
-                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@product.Id">Edit</a>
+                            <a class="btn btn-outline-info" asp-action="Detail" asp-route-id="@product.Id" asp-route-page="@Model.CurrentPage">Info</a>
+                            <a class="btn btn-outline-primary" asp-action="Edit" asp-route-id="@product.Id" asp-route-page="@Model.CurrentPage">Edit</a>
                             <a class="btn btn-outline-danger delete-product">Delete</a>
                         </td>
 
@@ -45,7 +46,7 @@
             </tbody>
         </table>
     </div>
-    <nav aria-label="Page navigation example">
+    <nav aria-label="Page navigation example" style="padding-top: 18px;">
         <ul class="pagination justify-content-center">
             <li class="page-item @(Model.HasPrevious ? " " : "disabled")">
                 <a asp-action="Index" asp-route-page="@(Model.CurrentPage - 1)" >
@@ -68,6 +69,3 @@
 
     <script src="~/admin/js/admin.js"></script>
 }
-
-
-
