products paginate added

--- a/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
+++ b/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using BrideyApp
 @using BrideyApp.Models
+@using BrideyApp.Helpers
 @using BrideyApp.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
