--- a/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Shop/Index.cshtml
@@ -225,166 +225,9 @@
                 </div>
                 <div class="col-lg-9 col-sm-12">
                     <div class="row">
-
-                        <div class="col-lg-4 col-sm-12 col-md-6">
-                            <div class="cart">
-                                <div class="new">New</div>
-                                <div class="product-img">
-                                    <a asp-controller="ProductDetail" asp-action="Index">
-
-                                        <img src="~/assets/images/bride 0ne.webp" class="primary-img"
-                                             alt="Card image cap">
-                                        <video class="secondary-img" playsineline="" loop="" muted="" autoplay=""
-                                               poster="https://cdn-2.jjshouse.com/upimg/s400/32/60/a92dd617a0e23ab4a9850c41a4113260.jpg"
-                                               src="https://cdn-1.jjshouse.com/upimg/s1140/aa/41/0563cee4ef0d46ca3d9b77dc0b0daa41.mp4"
-                                               type="video/mp4"></video>
-                                    </a>
-
-                                </div>
-                                <div class="product-name">
-                                    <div class="rating-box d-flex" style="justify-content:center">
-                                        <ul class="d-flex" style="list-style:none;padding: 0px;margin: 7px 0px;">
-                                            @*   @for (int i = 0; i < product.Rate; i++)
-                                            {
-                                            <li><i class="fa fa-star" style="color: #ffe24d;"></i></li>
-                                            }
-                                            @for (int i = 0; i < 5 - product.Rate; i++)
-                                            {
-                                            <li><i class="fa fa-star" style="color:darkgrey"></i></li>
-                                            }*@
-                                        </ul>
-                                    </div>
-                                    <span>Illusion Cap Sleeve Lace...</span>
-                                </div>
-                                <div class="product-price">
-                                    <p class="price" style="margin:0px;">$<span class="price">23.90</span></p>
-                                </div>
-
-                                <div class="functional-button">
-                                    <ul>
-                                        <li><a><i class="fa-solid fa-eye"></i></a></li>
-                                        <li><a><i class="fa-regular fa-heart"></i></a></li>
-                                        <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
-
-                                    </ul>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-lg-4 col-sm-12 col-md-6">
-                            <div class="cart">
-                                <div class="new">New</div>
-                                <div class="product-img">
-                                    <a asp-controller="ProductDetail" asp-action="Index">
-                                        <img src="~/assets/images/bridetwo.webp" class="primary-img"
-                                             alt="Card image cap">
-                                        <video class="secondary-img" playsineline="" loop="" muted="" autoplay=""
-                                               poster="https://cdn-2.jjshouse.com/upimg/s400/32/60/a92dd617a0e23ab4a9850c41a4113260.jpg"
-                                               src="https://cdn-1.jjshouse.com/upimg/s1140/4a/d1/315c225a1f5402f5603c8c18e3314ad1.mp4"
-                                               type="video/mp4"></video>
-                                    </a>
-                                </div>
-                                <div class="product-name">
-                                    <span>Wedding dresses</span>
-                                    <span>Floral Beaded Wedding Dress...</span>
-                                </div>
-                                <div class="product-price">
-                                    <p class="price">$<span class="price">35.90</span></p>
-                                </div>
-                                <div class="functional-button">
-                                    <ul>
-                                        <li><a><i class="fa-solid fa-eye"></i></a></li>
-                                        <li><a><i class="fa-regular fa-heart"></i></a></li>
-                                        <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
-
-                                    </ul>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-lg-4 col-sm-12 col-md-6">
-                            <div class="cart">
-                                <div class="new">New</div>
-                                <div class="product-img">
-                                    <a asp-controller="ProductDetail" asp-action="Index">
-                                        <img src="~/assets/images/bridefor.webp" class="primary-img"
-                                             alt="Card image cap">
-                                        <video class="secondary-img" playsineline="" loop="" muted="" autoplay=""
-                                               poster="https://cdn-2.jjshouse.com/upimg/s400/32/60/a92dd617a0e23ab4a9850c41a4113260.jpg"
-                                               src="https://cdn-1.jjshouse.com/upimg/s1140/0a/82/bddb2102029c2ed9d2ef82e80b400a82.mp4"
-                                               type="video/mp4"></video>
-                                    </a>
-                                </div>
-                                <div class="product-name">
-                                    <span>With corset lacing</span>
-                                    <span>Beaded Bodice with Tiered...</span>
-                                </div>
-                                <div class="product-price">
-                                    <p class="price">$<span class="price">29.90</span></p>
-                                </div>
-                                <div class="functional-button">
-                                    <ul>
-                                        <li><a><i class="fa-solid fa-eye"></i></a></li>
-                                        <li><a><i class="fa-regular fa-heart"></i></a></li>
-                                        <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
-
-                                    </ul>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="col-lg-4 col-sm-12 col-md-6">
-                            <div class="cart">
-                                <div class="new">New</div>
-                                <div class="product-img">
-                                    <a asp-controller="ProductDetail" asp-action="Index">
-                                        <img src="~/assets/images/bridethree.webp" class="primary-img"
-                                             alt="Card image cap">
-                                        <video class="secondary-img" playsineline="" loop="" muted="" autoplay=""
-                                               poster="https://cdn-2.jjshouse.com/upimg/s400/32/60/a92dd617a0e23ab4a9850c41a4113260.jpg"
-                                               src="https://cdn-3.jjshouse.com/upimg/s1140/3f/0d/cd2b157e5340a71a466fb450848c3f0d.mp4"
-                                               type="video/mp4"></video>
-                                    </a>
-                                </div>
-                                <div class="product-name">
-                                    <span>Wedding Dresses</span>
-                                    <span>Floral Tall Plus Wedding...</span>
-                                </div>
-                                <div class="product-price">
-                                    <p class="price">$<span class="price">23.90</span></p>
-                                </div>
-                                <div class="functional-button">
-                                    <ul>
-                                        <li><a><i class="fa-solid fa-eye"></i></a></li>
-                                        <li><a><i class="fa-regular fa-heart"></i></a></li>
-                                        <li><a><i class="fa-solid fa-basket-shopping"></i></a></li>
-
-                                    </ul>
-                                </div>
-                            </div>
-
-                        </div>
+                     <partial name="_ProductListPartial" model="Model.PaginateDatas" />
                     </div>
-                    <nav aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center">
-                            <li class="page-item  @(Model.PaginatedDatas.HasPrevious? "active" :"disabled")">
-                                <a style="color:#fff" asp-action="Index" asp-route-page="@(Model.PaginatedDatas.CurrentPage -1)" tabindex="-1" aria-label="Previous"><button class="left-btn"><i class="fa-solid fa-angles-left"></i></button></a>
-                            </li>
-
-                            @for (int i = 1; i <= Model.PaginatedDatas.TotalPage; i++)
-                            {
-
-                                <li class="page-item active @(Model.PaginatedDatas.CurrentPage == i ? "disabled" : "")">
-                                    <a style="text-decoration:none;color:#fff" asp-action="Index" asp-route-page="@i"><button class="btn">@i</button></a>
-                                </li>
-
-                            }
-                            <li class="page-item @(Model.PaginatedDatas.HasNext? "active" :"disabled")">
-                                <a style="color:#fff" asp-action="Index" asp-route-page="@(Model.PaginatedDatas.CurrentPage +1)" aria-label="Next"><button class="right-btn"><i class="fa-solid fa-angles-right"></i></button></a>
-                            </li>
-                        </ul>
-                    </nav>
-
+           
                 </div>
             </div>
         </div>
