--- a/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Edit.cshtml
+++ b/BrideyApp/BrideyApp/Areas/Admin/Views/Product/Edit.cshtml
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="~/admin/assets/css/main.css">
 }
 <div class="container my-5">
-    <div class="d-flex">
+    <h4>Images</h4>
+    <div class="d-flex" style="align-content:center">
         <div class="images d-flex" style="text-align:center">
-            <h4>Images</h4>
+           
             @foreach (var productImage in Model.Images)
             {
                 <div style="width:200px; margin-right:10px;" data-id="@productImage.Id">
-                    <img style="width:170px;height:190px" class="img-fluid" src="~/assets/images/@productImage.Image" />
+                    <img style="width:200px;height:200px" class="img-fluid" src="~/assets/images/@productImage.Image" />
                     <div class=" d-flex align-items-center justify-content-center" style="margin-top: 13px;" data-id="@productImage.Id">
                         <a class="delete-image"><i class="fa-solid fa-trash" style="color: #c60101; cursor:pointer;"></i></a>
                         <div class="statuses" style=" margin-left:10px;">
@@ -30,23 +31,23 @@
                 </div>
             }
         </div>
-        <div class="images" style="text-align:center">
+        <div class="images" style="text-align:center;position: relative;bottom: 40px;">
             <h4>Video</h4>
             <video class="secondary-img" playsineline="" loop="" muted="" autoplay=""
                    poster="https://cdn-2.jjshouse.com/upimg/s400/32/60/a92dd617a0e23ab4a9850c41a4113260.jpg"
                    src="@Model.Video"
-                   type="video/mp4" style="width:200px;height:190px"></video>
+                   type="video/mp4" style="width:200px;height:200px"></video>
         </div>
     </div>
 
     <form class="form-sample" asp-action="Edit" asp-route-page="@ViewBag.page" method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Photos</label>
+            <label for="formFile" class="form-label my-2">Change Photos</label>
             <input class="form-control" id="customFile" asp-for="Photos" />
             <span class="text-danger" asp-validation-for="Photos"></span>
         </div>
         <div class="form-group">
-            <label for="formFile" class="form-label my-2">Add Video</label>
+            <label for="formFile" class="form-label my-2">Change Video</label>
             <input class="form-control" id="customFile" asp-for="Video" />
             <span class="text-danger" asp-validation-for="Video"></span>
         </div>
