added acoount controller

--- a/BrideyApp/BrideyApp/Views/Blog/Index.cshtml
+++ b/BrideyApp/BrideyApp/Views/Blog/Index.cshtml
@@ -29,7 +29,7 @@
                             <div class="col-lg-6 col-sm-12 col-md-6">
                                 <div class="blog-cart">
                                     <div class="post-thumb">
-                                        <a asp-controller="BlogDetail" asp-action="Index">
+                                        <a asp-controller="Blog" asp-action="BlogDetail" asp-route-id="@blog.Id">
                                             <img src="~/assets/images/@blog.Image">
                                         </a>
                                         <span><a>Dress Details</a></span>
@@ -104,7 +104,7 @@
                             {
                                 <div class="item-post d-flex">
                                     <div class="post-thumb">
-                                        <a class="">
+                                        <a asp-controller="Blog" asp-action="BlogDetail">
                                             <img src="~/assets/images/@blog.Image">
                                         </a>
                                     </div>
