--- a/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
+++ b/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using BrideyApp.Models
 @using BrideyApp.Helpers
 @using BrideyApp.ViewModels
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
