--- a/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
+++ b/BrideyApp/BrideyApp/Views/_ViewImports.cshtml
@@ -2,5 +2,8 @@
 @using BrideyApp.Models
 @using BrideyApp.Helpers
 @using BrideyApp.ViewModels
+@using BrideyApp.ViewModels.Account
 @using Microsoft.AspNetCore.Identity
+@using BrideyApp.Services.Interfaces
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
